--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <br>
                     <br>I am an aspiring graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
                     <br>
-                    <br>As a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                    <br>As a full-stack developer I would love to work with you on your project. <a href="#Contact">Contact</a> me below!
                 </p>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy; Devon Prevost 2021, <a href="" target="_blank">DevonPrevost.devon</a></p>
+                <p class="center">&copy; Devon Prevost 2021, <a href="https://dprevost5.github.io" target="_blank">Devon Prevost's Portfolio</a></p>
                 <br>
             </p>
         </footer>
